welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:12: error: not found: value i
				tabCol(i) = c
                                       ^Array1:14: error: value unary_! is not a member of java.awt.Color
			}while(!colIni == c);
                               ^Array1:26: error: not found: type int
    var res = new Array[int] (taille)
                        ^